tests/e2e/ingress-annotations/00-create-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress-annotations
spec:
  finalizers:
  - kubernetes
