tests/e2e/ingress-annotations/01-create-resources.yaml
---
apiVersion: cloud.redhat.com/v1alpha1
kind: FrontendEnvironment
metadata:
  name: test-ingress-annotations-environment
spec:
  generateNavJSON: false
  ssl: false
  hostname: foo.redhat.com
  sso: https://sso.foo.redhat.com
  ingressAnnotations:
    "nginx.ingress.kubernetes.io/rewrite-target" : "/"
---
apiVersion: cloud.redhat.com/v1alpha1
kind: Frontend
metadata:
  name: chrome
  namespace: test-ingress-annotations
spec:
  API:
    versions:
      - v1
  frontend:
    paths:
      - /
  deploymentRepo: https://github.com/RedHatInsights/insights-chrome
  envName: test-ingress-annotations-environment
  image: quay.io/cloudservices/insights-chrome-frontend:720317c
  module:
    config:
      ssoUrl: 'https://'
    manifestLocation: /apps/chrome/js/fed-mods.json
  title: Chrome
